--- a/branches/branch-playground/plugins/action/action.vcproj
+++ b/branches/branch-playground/plugins/action/action.vcproj
@@ -531,7 +531,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -541,7 +541,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 			</File>
@@ -555,7 +555,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -565,7 +565,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 			</File>
@@ -579,7 +579,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -589,7 +589,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 			</File>
