--- a/branches/branch-playground/plugins/sms/sms.vcproj
+++ b/branches/branch-playground/plugins/sms/sms.vcproj
@@ -525,7 +525,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -535,7 +535,7 @@
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
 						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h;$(InputDir)moc_$(InputName).cpp"
+						Outputs="$(InputDir)ui_$(InputName).h"
 					/>
 				</FileConfiguration>
 			</File>
