Move creating MenuTextEdin menu items from CorePugin contructor (core.cpp) to creatMenuTextEdit() (textedit_menu.cpp).
Have done it long time ago but still did not commit

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(_core_SRCS
         smscfg.cpp
         status.cpp
         statuswnd.cpp
+        textedit_menu.cpp
         tmpl.cpp
         toolbar_container.cpp
         toolbar_history.cpp
