* textedit_menu.cpp added.

--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -1177,6 +1177,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\textedit_menu.cpp"
+				>
+			</File>
+			<File
 				RelativePath="tmpl.cpp"
 				>
 				<FileConfiguration
