* merged trunk-changes from rev. 2374 to this.

--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -1178,6 +1178,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\textedit_menu.cpp"
+				>
+			</File>
+			<File
 				RelativePath="tmpl.cpp"
 				>
 				<FileConfiguration
