require cmake 2.6.2 and remove a lot of obsolete find modules

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 PROJECT(Sim-IM)
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4.4)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 SET(CMAKE_COLOR_MAKEFILE ON)
 
 # where to look first for cmake modules, before ${CMAKE_ROOT}/Modules/ is checked
@@ -52,6 +52,7 @@ SET(QT_USE_QTUITOOLS 1)
 SET(QT_USE_QTNETWORK 1)
 SET(QT_USE_QT3SUPPORT 1)
 INCLUDE(${QT_USE_FILE})
+add_definitions(-DQT3_SUPPORT_WARNINGS)
 
 # optional packages
 FIND_PACKAGE(ASPELL)
