--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -141,7 +141,7 @@ INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${LIBICONV_INC
 TARGET_LINK_LIBRARIES(simlib ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES})
 
 IF(WIN32)
-  TARGET_LINK_LIBRARIES(simlib ${LIBICONV_LIBRARIES})
+  TARGET_LINK_LIBRARIES(simlib ${LIBICONV_LIBRARIES} ${QT_QTMAIN_LIBRARY})
 ENDIF(WIN32)
 
 # set correct install path
